--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Nikita Classes",
+  "name": "nikita_classes",
   "description": "A Vue.js Nikita Classes WP theme",
   "version": "0.4.5",
   "author": "Konstantin Timofeev <kt@webink.site>",
