--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^0.19.2",
     "imagemin-webpack-plugin": "^2.4.2",
     "swiper": "^5.4.5",
+    "video.js": "^7.10.1",
+    "videojs-resolution-switcher": "^0.4.2",
     "vue": "^2.5.11",
     "vue-awesome-swiper": "^4.1.1",
     "vue-cookies": "^1.7.0",
