--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "axios": "^0.19.2",
     "imagemin-webpack-plugin": "^2.4.2",
     "swiper": "^5.4.5",
-    "video.js": "^7.10.1",
-    "videojs-resolution-switcher": "^0.4.2",
     "vue": "^2.5.11",
     "vue-awesome-swiper": "^4.1.1",
     "vue-cookies": "^1.7.0",
+    "vue-core-video-player": "^0.2.0",
     "vue-nouislider": "^1.0.1",
     "vue-password-strength-meter": "^1.7.2",
     "vue-router": "^3.3.4",
     "vue-the-mask": "^0.11.1",
+    "vue-video-player": "^5.0.2",
     "vue-yandex-maps": "^0.10.8",
     "vuelidate": "^0.7.5",
     "vuetify": "^2.3.14",
